WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281855
Invisible layers should not be flagged as separated
https://bugs.webkit.org/show_bug.cgi?id=281855
Summary
Invisible layers should not be flagged as separated
Etienne
Reported
2024-10-21 08:29:55 PDT
Invisible layers should not be flagged as separated. The same way we might not attach a backing store to a layer outside of the viewport.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2024-10-21 08:47:25 PDT
<
rdar://problem/138188635
>
Etienne
Comment 2
2024-10-21 08:47:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35518
EWS
Comment 3
2024-10-22 12:43:33 PDT
Committed
285567@main
(1400c1d4ef81): <
https://commits.webkit.org/285567@main
> Reviewed commits have been landed. Closing PR #35518 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug