Invisible layers should not be flagged as separated https://bugs.webkit.org/show_bug.cgi?id=281855 <rdar://138188635>

Reviewed by Simon Fraser.

Separating a layer is not free and only visible layers should get this
treatment.
Check the layer visible rect before applying the `isSeparated` property.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeNode.h:
(WebKit::RemoteLayerTreeNode::shouldBeSeparated const):
(WebKit::RemoteLayerTreeNode::setShouldBeSeparated):
Keep track of the requested separated state on the node like we do for
the visible rect.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreePropertyApplier.mm:
(WebKit::RemoteLayerTreePropertyApplier::applyPropertiesToLayer):
(WebKit::RemoteLayerTreePropertyApplier::applyProperties):
Only set `separated` on the layer if its visible

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateCoverage):
(WebCore::GraphicsLayerCA::changeLayerTypeTo):
* Source/WebCore/platform/graphics/ca/PlatformCALayer.h:
* Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.h:
* Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
Make sure the visible rect is propagated to the UI Process when
separated layers are enabled.

* LayoutTests/platform/visionos/transforms/separated.html:
* LayoutTests/platform/visionos/transforms/separated-expected.txt:
Update the test with an out-of-viewport separated layer.
* LayoutTests/platform/visionos/transforms/separated-update-expected.txt:
* LayoutTests/platform/visionos/transforms/separated-update.html:
Introduce a new test where scrolling reveals new separated layers.

Canonical link: https://commits.webkit.org/285567@main